--- a/client/src/app/style/vars/index.scss
+++ b/client/src/app/style/vars/index.scss
@@ -6,6 +6,7 @@
   --text-color-red: #E26060;
   --text-color-purple: #7A59F7;
   --text-color-purple-light: #8FB5FF;
+  --text-color-blue: #A1C0FF;
 
   --nav-color: #989EA8;
 
