--- a/client/src/pages/lecture-page/style/lecture.scss
+++ b/client/src/pages/lecture-page/style/lecture.scss
@@ -2,3 +2,14 @@
   padding: 25px;
 }
 
+.lecture-page__list {
+  padding-right: 50px;
+
+  height: calc(100vh - 250px);
+
+  overflow-y: scroll;
+
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
